--- a/src/components/editor/editor.module.css
+++ b/src/components/editor/editor.module.css
@@ -2,10 +2,12 @@
 
 .editor {
   flex-basis: 50%;
+  padding: 0.5em 2em;
 }
 
 .title {
   text-align: center;
-  margin: 1em;
+  margin: 2em 0;
   color: makerGreen;
+  font-size: 1.5rem;
 }
