--- a/src/components/maker/maker.module.css
+++ b/src/components/maker/maker.module.css
@@ -10,7 +10,7 @@
 .container {
   display: flex;
   flex: 1;
-  font-size: 1.5rem;
+  background-color: makerWhite;
 }
 
 @media screen and (max-width: mediaQuery) {
