--- a/src/components/preview/preview.module.css
+++ b/src/components/preview/preview.module.css
@@ -6,6 +6,11 @@
 
 .title {
   text-align: center;
-  margin: 1em;
+  margin: 2em 0;
   color: makerGreen;
+  font-size: 1.5rem;
+}
+
+.cards {
+  padding: 0.5em 2em;
 }
