--- a/src/components/image_file_input/image_file_input.module.css
+++ b/src/components/image_file_input/image_file_input.module.css
@@ -1,8 +1,11 @@
-@value makerBlack,makerWhite,makerGrey,makerLightGrey from '../../common/colors.css';
+@value makerBlack,makerWhite,makerGrey,makerLightGrey,makerPink,makerLightPink from '../../common/colors.css';
 .upload {
   display: flex;
   width: 100%;
   height: 100%;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid black;
 }
 
 .input {
@@ -11,15 +14,40 @@
 
 .button {
   width: 100%;
+  height: 100%;
   outline: 0;
   border: 0;
   cursor: pointer;
-  background-color: makerLightGrey;
   font-weight: bold;
   font-size: 0.8rem;
-  border-bottom: 1px solid black;
+}
+
+.button.pink {
+  background-color: makerLightPink;
+}
+
+.button.grey {
+  background-color: makerLightGrey;
 }
 
 .button:hover {
   opacity: 0.8;
+}
+
+.loading {
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  border: 4px solid makerLightGrey;
+  border-top: 4px solid makerPink;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
