--- a/src/components/maker/maker.module.css
+++ b/src/components/maker/maker.module.css
@@ -5,12 +5,14 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  max-width: 80rem;
 }
 
 .container {
   display: flex;
   flex: 1;
   background-color: makerWhite;
+  min-height: 0;
 }
 
 @media screen and (max-width: mediaQuery) {
